# source_code_of_paper_1

./: README.md
00-Source_Code_of_Models/: README.md
00-Source_Code_of_Models/CNN-1/: cnn_back_propagation.m  cnn_feedforward.m  cnn_main_1.m  cnn_setup_1.m  cnn_train_1.m  cnn_weight_updated.m  data.mat  flip_diagonal.m  test.m
00-Source_Code_of_Models/CNN-2/: cnn_back_propagation.m  cnn_feedforward_deep.m  cnn_main_deep.m  cnn_setup_deep.m  cnn_test_deep.m  cnn_train_deep.m  derivative.m  flip_all.m  test.m
00-Source_Code_of_Models/CNN-3/: cnn_back_propagation.m  cnn_feedforward.m  cnn_main_1.m  cnn_setup_1.m  cnn_test_1.m  cnn_train_1.m  cnn_weight_updated.m  test.m
00-Source_Code_of_Models/CNN-4/: cnn_back_propagation.m  cnn_feedforward.m  cnn_main_1.m  cnn_setup_1.m  cnn_test_1.m  cnn_train_1.m  cnn_weight_updated.m  data.mat  test.m
00-Source_Code_of_Models/CNN-5/: cnn_back_propagation.m  cnn_main_1.m  cnn_setup_1.m  cnn_test_1.m  cnn_train_1.m  cnn_weight_updated.m  image_data.mat  test.m
01-Source_Code_and_Result_for_Testing/image-wise/: Get_image_depth.m  cnn_feedforward.m  cnn_feedforward_deep.m  main1.m  main1_2.m  main_deep.m
01-Source_Code_and_Result_for_Testing/object-wise/: Dig_Img.m  Dig_deep.m  cnn_feedforward.m  draw_frame.m  main1.m  piont_xyz.m  result_play.m  send_msg.m
02-Source_Code_for_youBot_Experiment/ros_matla_class/: cnn_class.mat  cnn_feedforward.m  result_play.m  test.m  test2.m
02-youBot_Driver/: README.md
04-Kinect_UR5_Shadow_Driver/vehicle_ur_shadow_config/src/bulldog_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+798 files in other folders)
